--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/guanmars/qyer#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mint-ui": "^2.2.13",
     "mysql": "^2.17.1"
   }
 }
